<resources>
    <string name="app_name">Genshin Statistics</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="character">Character</string>
    <string name="weapon">Weapon</string>
    <string name="standard">Standard</string>
    <string name="add_history_item">Add History Item</string>
    <string name="add_Goal_item">Add Goal Item</string>
    <string name="name">Name</string>
    <string name="win_date">Win Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="search_item">Search Item</string>
    <string name="the_item_will_be_removed_permanently">The Item will be removed permanently!</string>
    <string name="are_you_sure_you_want_n_to_delete">Are you sure you want\n to delete?</string>
    <string name="yes">Yes</string>
    <string name="wish_type">Wish Type</string>
    <string name="please_select_item">Please select item!</string>
    <string name="win_rate">Win Rate</string>
    <string name="wish_rate">Wish Rate</string>
    <string name="statistic">Statistic</string>
    <string name="filter_by">Filter by</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="fifty_50_wins">50/50 wins</string>
    <string name="fifty_50_wins_strike">50/50 wins strike</string>
    <string name="fifty_50_lose_strike">50/50 lose strike</string>
    <string name="ascension">Ascension</string>
</resources>