<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:layout_marginEnd="10dp">
    <LinearLayout
            android:id="@+id/add_goal_item_dialog"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/add_dialog_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_layout">
                <ImageButton
                        android:src="@drawable/ic_close"
                        android:background="@drawable/round_button_bg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/dialog_close"/>

                <TextView
                        android:text="@string/add_Goal_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="24sp"
                        style="@style/primaryTextColor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:id="@+id/dialog_title"
                        android:layout_weight="7"/>

                <ImageButton
                        android:src="@drawable/ic_done"
                        android:background="@drawable/round_button_bg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/dialog_done"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/name_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/item_bg">
                <TextView
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginStart="10dp"
                        style="@style/primaryTextColor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:id="@+id/name_input_title"
                        android:layout_weight="1"/>
                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="13dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="13dp"
                        android:background="@color/black"
                        android:id="@+id/line_between"/>
                <AutoCompleteTextView
                        android:id="@+id/item_selector"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:hint="@string/search_item"
                        android:inputType="text"
                        android:textSize="14sp"
                        style="@style/secondaryTextColor"
                        android:padding="10dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_arrow_down"
                        android:background="@android:color/transparent"
                        android:layout_weight="2"/>

            </LinearLayout>
            <TextView
                    android:id="@+id/item_selector_error"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:layout_marginStart="150dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/please_select_item"/>
            <LinearLayout
                    android:id="@+id/asc_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/item_bg">
                <TextView
                        android:text="@string/ascension"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="14sp"
                        style="@style/primaryTextColor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:id="@+id/wish_type_input_title"/>
                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="13dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="13dp"
                        android:background="@color/black"
                        android:id="@+id/line_between_2"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
                        <Spinner
                                android:id="@+id/wish_type_selector"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingStart="10dp"
                                android:paddingEnd="5dp"
                                android:layout_marginEnd="10dp"
                                android:clickable="false"
                                android:background="@android:color/transparent"
                                android:popupBackground="@color/milk"
                                android:popupTheme="@style/secondaryTextColor"
                                android:spinnerMode="dropdown"
                                android:textColor="@android:color/black"
                                android:textStyle="bold">
                        </Spinner>
                    </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
