<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:layout_marginEnd="10dp">
    <LinearLayout
            android:id="@+id/item_delete"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/add_dialog_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ImageButton
                    android:src="@drawable/ic_close"
                    android:background="@drawable/round_button_bg"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/dialog_close"/>
            <TextView
                    android:text="@string/are_you_sure_you_want_n_to_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal"
                    style="@style/primaryTextColor"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:id="@+id/dialog_title"/>
            <TextView
                    android:id="@+id/dialog_description"
                    android:text="@string/the_item_will_be_removed_permanently"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    style="@style/secondaryTextColor"
                    android:textStyle="normal"
                    android:textAlignment="center"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content">

                <FrameLayout
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/no_layout"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="40dp"
                        android:translationZ="10dp">
                    <ImageButton
                            android:background="@drawable/button_active"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/no_button"/>
                    <TextView
                            android:text="No"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/no_text"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            style="@style/primaryTextColor"
                            android:layout_gravity="center"/>
                </FrameLayout>
                <FrameLayout
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/standart_layout"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="40dp"
                        android:layout_gravity="end"
                        android:translationZ="10dp">
                    <ImageButton
                            android:background="@drawable/button_active"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/yes_button"/>
                    <TextView
                            android:text="@string/yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/yes_text"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            style="@style/primaryTextColor"
                            android:layout_gravity="center"/>
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
