<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:layout_marginEnd="10dp">
    <LinearLayout
            android:id="@+id/add_reminder_dialog_first_page"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@drawable/add_dialog_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/header_layout">
                <ImageButton
                        android:src="@drawable/ic_close"
                        android:background="@drawable/round_button_bg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/dialog_close"/>

                <TextView
                        android:text="@string/add_item"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="24sp"
                        style="@style/primaryTextColor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:id="@+id/dialog_title"
                        android:layout_weight="7"/>

                <ImageButton
                        android:src="@drawable/ic_done"
                        android:background="@drawable/round_button_bg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/dialog_done"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/name_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/item_bg">
                <TextView
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        style="@style/primaryTextColor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:id="@+id/name_input_title"
                        android:layout_weight="1"/>
                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="13dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="13dp"
                        android:background="@color/black"
                        android:id="@+id/line_between"/>
                <AutoCompleteTextView
                        android:id="@+id/item_selector"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:hint="@string/search_item"
                        android:inputType="text"
                        android:textSize="16sp"
                        style="@style/secondaryTextColor"
                        android:dropDownHeight="200dp"
                        android:padding="10dp"
                        android:focusable="true"
                        android:clickable="true"
                        android:drawableEnd="@drawable/ic_arrow_down"
                        android:background="@android:color/transparent"
                        android:layout_weight="2"/>

            </LinearLayout>
            <TextView
                    android:id="@+id/item_selector_error"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textColor="@color/white"
                    android:textAlignment="textStart"
                    android:layout_marginStart="120dp"
                    android:layout_marginEnd="30dp"
                    android:text="Please select item!"/>
            <LinearLayout
                    android:id="@+id/rate_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">
                <TextView
                        android:text="Wish Rate:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        style="@style/primaryTextColor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:id="@+id/pull_rate_input_title"
                        android:layout_weight="1"/>
                <LinearLayout
                        android:id="@+id/number_picker_layout"
                        android:orientation="horizontal"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/item_bg"
                        android:gravity="center_vertical">
                    <ImageButton
                            android:src="@drawable/ic_arrow_down"
                            android:background="@android:color/transparent"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:id="@+id/number_arrow_down"/>
                    <android.widget.NumberPicker
                            android:id="@+id/wish_rate_selector"
                            android:layout_width="0dp"
                            android:layout_height="150dp"
                            android:textAlignment="center"
                            android:background="@android:color/transparent"
                            android:textSize="25sp"
                            android:padding="10dp"
                            android:layout_weight="1"
                            android:value="1"/>
                    <ImageButton
                            android:src="@drawable/ic_arrow_up"
                            android:background="@android:color/transparent"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:id="@+id/number_arrow_up"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/win_date_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/item_bg">
                <TextView
                        android:text="@string/win_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        style="@style/primaryTextColor"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:id="@+id/win_date_input_title"
                        android:layout_weight="1"/>
                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="13dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_marginBottom="13dp"
                        android:background="@color/black"
                        android:id="@+id/line_between_2"/>
                <EditText
                        android:id="@+id/win_date_selector"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:hint="@string/choose_date"
                        android:inputType="date"
                        android:textSize="16sp"
                        style="@style/secondaryTextColor"
                        android:dropDownHeight="200dp"
                        android:padding="10dp"
                        android:drawableEnd="@drawable/ic_date"
                        android:background="@android:color/transparent"
                        android:layout_weight="2"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
